styles: fix link misalignment

--- a/src/components/acolhimento-section/options/styles.module.css
+++ b/src/components/acolhimento-section/options/styles.module.css
@@ -14,18 +14,20 @@
   }
 
   .option {
-    padding-bottom: 0.5rem;
+    padding-block: 0.5rem;
+    border-top: 2px solid transparent;
     border-bottom: 2px solid transparent;
     transition: font-weight 150ms ease-in-out, border-color 150ms ease-in-out;
     &:hover {
       font-weight: 500;
-      border-color: var(--color-primary-darkest);
+      border-bottom-color: var(--color-primary-darkest);
     }
     &:focus-visible {
       border-radius: 4px;
       outline-offset: 10px;
     }
     @media (min-width: 40em) {
+      border-top-width: 4px;
       border-bottom-width: 4px;
     }
   }
